Volley Init complete

--- a/App4/app/src/main/res/layout/activity_main.xml
+++ b/App4/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
-
+    <ImageView
+        android:id="@+id/idIVCourse"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:visibility="gone"
+        android:layout_margin="5dp" />
+    <ProgressBar
+        android:id="@+id/idLoadingPB"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:visibility="visible" />
 </LinearLayout>
