--- a/App4/app/src/main/res/layout/activity_main.xml
+++ b/App4/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,16 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".MainActivity">
-    <ImageView
-        android:id="@+id/idIVCourse"
+    <GridView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
+        android:id="@+id/idGridView"
         android:visibility="gone"
-        android:layout_margin="5dp" />
+        android:numColumns="2"
+        />
     <ProgressBar
         android:id="@+id/idLoadingPB"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
         android:visibility="visible" />
 </LinearLayout>
