--- a/App5/app/src/main/res/layout/activity_item_view.xml
+++ b/App5/app/src/main/res/layout/activity_item_view.xml
@@ -8,23 +8,30 @@
     android:orientation="vertical"
     android:weightSum="10"
     tools:context=".ItemView">
+    <ProgressBar
+        android:id="@+id/idSettingWall"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:visibility="gone" />
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="7"
+        android:visibility="visible"
         android:id="@+id/itemImage"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:orientation="vertical"
         android:weightSum="10"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="7"
+            android:layout_weight="10"
             android:gravity="center"
             android:orientation="vertical"
             android:weightSum="5"
@@ -37,7 +44,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Likes Count :"
+                    android:text="Likes Count"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:padding="5dp"
@@ -53,6 +60,32 @@
                     android:padding="5dp"
                     android:layout_weight="1"
                     android:id="@+id/txtLikes"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Original Size"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:padding="5dp"
+                    android:layout_weight="1"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4096x2180"
+                    android:textColor="#FFFFFF"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:padding="5dp"
+                    android:layout_weight="1"
+                    android:id="@+id/txtUploadSize"
                     />
             </LinearLayout>
             <LinearLayout
@@ -85,7 +118,7 @@
             android:layout_width="match_parent"
             android:textAlignment="center"
             android:layout_height="0dp"
-            android:text="Download Options"
+            android:text="Wallpaper Set Options"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:padding="5dp"
@@ -94,7 +127,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:gravity="center"
                 >
                 <Button
@@ -123,21 +156,5 @@
                     />
             </LinearLayout>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:orientation="vertical"
-            android:gravity="center"
-            >
-            <Button
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Set WallPaper"
-                android:id="@+id/btnSetWall"
-                />
-    </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
